post-detail published time

--- a/src/app/posts/post-detail/post-detail.component.html
+++ b/src/app/posts/post-detail/post-detail.component.html
@@ -1,3 +1,5 @@
-<p>
-  post-detail works!
-</p>
+<div *ngIf="post">
+  <h3>{{post.title}}</h3>
+  <p>posted by {{post.author}} &bull; {{post.published.toDate() | date: 'dd/MM/yyyy'}}</p>
+  <p>{{post.content}}</p>
+</div>
