--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -2,3 +2,17 @@ img{
     max-width: 100%;
     height: auto;
 }
+
+section{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-rows: auto;
+    grid-gap: 10px;
+    margin: 0 auto;
+    max-width:95%;
+}
+
+mat-card{
+    margin: 10px 0;
+    max-width: 700px;
+}
