--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -5,7 +5,7 @@
       <h2>{{post.title}}</h2>
       <p><small>Posted by {{post.author}} &bull; on {{post.published.toDate() |  date: 'fullDate'}}</small></p>
     </mat-card-content>
-    <mat-card-actions align="end">
+    <mat-card-actions align="end" *ngIf="auth.currentUserId === post.authorId">
       <button mat-icon-button (click)="delete(post.id)">
         <mat-icon>delete</mat-icon>
       </button>
