--- a/src/app/posts/post-detail/post-detail.component.html
+++ b/src/app/posts/post-detail/post-detail.component.html
@@ -1,14 +1,20 @@
+<div [hidden]="!editing">
+  <h1>Edit Mode</h1>
+</div>
 
-<mat-card *ngIf="post">
-  <img [src]="post.image" alt="{{post.title}}">
-  <p>Posted by {{post.author}} &bull; {{post.published.toDate() | date: fullDate}}</p>
-  <mat-card-content>{{post.content}}</mat-card-content>
-  <mat-card-actions align="end" *ngIf="auth.currentUserId === post.authorId">
-    <button mat-icon-button (click)="editing=true">
-      <mat-icon>edit</mat-icon>
-    </button>
-    <button mat-icon-button (click)="delete()">
-      <mat-icon>delete</mat-icon>
-    </button>
-  </mat-card-actions>
-</mat-card>
+<div [hidden]="editing">
+  <h1>View Mode</h1>
+  <mat-card *ngIf="post">
+    <img [src]="post.image" alt="{{post.title}}">
+    <p>Posted by {{post.author}} &bull; {{post.published.toDate() | date: fullDate}}</p>
+    <mat-card-content>{{post.content}}</mat-card-content>
+    <mat-card-actions align="end" *ngIf="auth.currentUserId === post.authorId">
+      <button mat-icon-button (click)="editing=true">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button (click)="delete()">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </mat-card-actions>
+  </mat-card>
+</div>
