added update content

--- a/src/app/posts/post-dashboard/post-dashboard.component.html
+++ b/src/app/posts/post-dashboard/post-dashboard.component.html
@@ -33,7 +33,7 @@
         <br>
         <button mat-raised-button 
         color="accent" (click)="createPost()" 
-        [disabled]="!title || !content">{{buttonText}}</button>   
+        [disabled]="!title || !content || !image">{{buttonText}}</button>   
 
     </mat-expansion-panel>     
   </mat-accordion>
