--- a/src/app/posts/post-detail/post-detail.component.html
+++ b/src/app/posts/post-detail/post-detail.component.html
@@ -1,30 +1,36 @@
 <ng-container *ngIf="post">
 
   <div [hidden]="!editing">
-    <h1>Edit Mode</h1>
-    <mat-form-field>
-      <input matInput placeholder="Post Title" 
-      [(ngModel)]="post.title">
-    </mat-form-field>    
-    <br>      
-    <mat-form-field>
-      <textarea matInput 
-      placeholder="Post Content" 
-      [(ngModel)]="post.content" 
-      rows="5"></textarea>
-    </mat-form-field>
-    <br>
-    <button mat-raised-button 
-    color="accent" (click)="updatePost()" 
-    [disabled]="!title || !content">Save</button> 
+    <mat-card>
+      <h2>Update Post</h2>
+    
+      <mat-form-field>
+        <input matInput placeholder="Post Title" 
+        [(ngModel)]="post.title">
+      </mat-form-field>    
+      <br>      
+      <mat-form-field>
+        <textarea matInput 
+        placeholder="Post Content" 
+        [(ngModel)]="post.content" 
+        rows="5"></textarea>
+      </mat-form-field>
+      <br>
+      <button mat-raised-button 
+      color="accent" (click)="updatePost()">Save</button> 
+      <button mat-button 
+      (click)="editing=false">Cancel</button> 
+    </mat-card>
   </div>
 
   <div [hidden]="editing">
-    <h1>View Mode</h1>
     <mat-card>
       <img [src]="post.image" alt="{{post.title}}">
       <p>Posted by {{post.author}} &bull; {{post.published.toDate() | date: fullDate}}</p>
-      <mat-card-content>{{post.content}}</mat-card-content>
+      <mat-card-content>
+        <h2>{{post.title}}</h2>
+        <p>{{post.content}}</p>
+      </mat-card-content>
       <mat-card-actions align="end" *ngIf="auth.currentUserId === post.authorId">
         <button mat-icon-button (click)="editing=true">
           <mat-icon>edit</mat-icon>
