--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -15,4 +15,10 @@ section{
 mat-card{
     margin: 10px 0;
     max-width: 700px;
+    cursor: pointer;
+}
+
+mat-content-card:focus{
+    outline: none;
+    border: 0;
 }
