--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,7 +1,7 @@
 <section>
   <mat-card *ngFor="let post of posts | async">
-    <mat-card-content  routerLink="{{post.id}}">
-      <img [src]="post.image" alt="{{post.title}}">
+    <mat-card-content routerLink="{{post.id}}">
+      <img mat-card-image src="{{post.image}}" alt="{{post.title}}">
       <h2>{{post.title}}</h2>
       <p><small>Posted by {{post.author}} &bull; on {{post.published.toDate() |  date: 'fullDate'}}</small></p>
     </mat-card-content>
