--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -3,7 +3,7 @@
     <mat-card-content routerLink="{{post.id}}">
       <img mat-card-image src="{{post.image}}" alt="{{post.title}}">
       <h2>{{post.title}}</h2>
-      <p><small>Posted by {{post.author}} &bull; on {{post.published.toDate() |  date: 'fullDate'}}</small></p>
+      <p><small>Posted by <span>{{post.author}}</span> &bull; on {{post.published.toDate() |  date: 'fullDate'}}</small></p>
     </mat-card-content>
     <mat-card-actions align="end" *ngIf="auth.currentUserId === post.authorId">
       <button mat-icon-button (click)="delete(post.id)">
